--- a/DnsClientX.Examples/DnsClientX.Examples.csproj
+++ b/DnsClientX.Examples/DnsClientX.Examples.csproj
@@ -9,5 +9,8 @@
     <ItemGroup>
         <ProjectReference Include="..\DnsClientX\DnsClientX.csproj" />
     </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\DnsClientX.Converter\DnsClientX.Converter.csproj" />
+    </ItemGroup>
 
 </Project>
