--- a/DnsClientX.PowerShell/DnsClientX.PowerShell.csproj
+++ b/DnsClientX.PowerShell/DnsClientX.PowerShell.csproj
@@ -2,8 +2,8 @@
     <PropertyGroup>
         <TargetFrameworks>net472;netstandard2.0</TargetFrameworks>
         <Description>PowerShell Module for working with Event Logs</Description>
-        <AssemblyName>PowerDnsClient</AssemblyName>
-        <AssemblyTitle>PowerDnsClient</AssemblyTitle>
+        <AssemblyName>DnsClientX.PowerShell</AssemblyName>
+        <AssemblyTitle>DnsClientX.PowerShell</AssemblyTitle>
         <VersionPrefix>0.1.0</VersionPrefix>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <Company>Evotec</Company>
