ci: add cross-platform tests with codecov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,62 @@
-name: CI
+name: Test .NET
 
 on:
     push:
-        branches: [ master ]
+        branches:
+            - master
+        paths-ignore:
+            - '*.md'
+            - 'Docs/**'
+            - 'Examples/**'
+            - '.gitignore'
     pull_request:
+        branches:
+            - master
+
+env:
+    DOTNET_VERSION: '8.x'
+    BUILD_CONFIGURATION: 'Release'
 
 jobs:
-    build:
+    test:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [windows-latest, ubuntu-latest, macos-latest]
         steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-dotnet@v3
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v4
               with:
-                  dotnet-version: '8.0.x'
-            - name: Restore
-              run: dotnet restore
-            - name: Build
-              run: dotnet build --no-restore --configuration Release
-            - name: Test
-              run: dotnet test --no-build --configuration Release --collect:"XPlat Code Coverage" --results-directory ./TestResults
-            - name: Upload code coverage
+                  dotnet-version: ${{ env.DOTNET_VERSION }}
+
+            - name: Restore dependencies
+              run: dotnet restore DnsClientX.sln
+
+            - name: Build solution
+              run: dotnet build DnsClientX.sln --configuration ${{ env.BUILD_CONFIGURATION }} --no-restore
+
+            - name: Run tests
+              run: dotnet test DnsClientX.Tests/DnsClientX.Tests.csproj --configuration ${{ env.BUILD_CONFIGURATION }} --framework net8.0 --no-build --verbosity normal --logger trx --collect:"XPlat Code Coverage"
+
+            - name: Upload test results
+              uses: actions/upload-artifact@v4
+              if: always()
+              with:
+                  name: test-results-${{ matrix.os }}
+                  path: '**/*.trx'
+
+            - name: Upload coverage reports
+              uses: actions/upload-artifact@v4
+              if: always()
+              with:
+                  name: coverage-reports-${{ matrix.os }}
+                  path: '**/coverage.cobertura.xml'
+
+            - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v3
               with:
-                  files: ./TestResults/**/coverage.cobertura.xml
+                  files: '**/coverage.cobertura.xml'
 
