Add GitHub Actions workflows and disable Azure Pipelines

--- a/azure-pipelines-linux.yml
+++ b/azure-pipelines-linux.yml
@@ -2,33 +2,9 @@
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/windows/dot-net
 
-trigger:
-  batch: true
-  branches:
-    include:
-      - master
-  paths:
-    exclude:
-      - docs
-      - .github
-      - .vs
-      - Assets
-      - README.md
-      - CHANGELOG.MD
-
-pr:
-  autoCancel: true
-  branches:
-    include:
-      - '*'
-  paths:
-    exclude:
-      - docs
-      - .github
-      - .vs
-      - Assets
-      - README.md
-      - CHANGELOG.MD
+# Disabled: migrated to GitHub Actions
+trigger: none
+pr: none
 
 pool:
   vmImage: 'ubuntu-latest'
