--- a/.github/workflows/test-powershell.yml
+++ b/.github/workflows/test-powershell.yml
@@ -76,7 +76,7 @@ jobs:
 
             - name: Run PowerShell tests
               shell: powershell
-              run: ./DnsClientX.Tests.ps1
+              run: ./Module/DnsClientX.Tests.ps1
 
     test-windows-ps7:
         needs: refresh-psd1
@@ -111,7 +111,7 @@ jobs:
 
             - name: Run PowerShell tests
               shell: pwsh
-              run: ./DnsClientX.Tests.ps1
+              run: ./Module/DnsClientX.Tests.ps1
 
     test-ubuntu:
         needs: refresh-psd1
@@ -153,7 +153,7 @@ jobs:
 
             - name: Run PowerShell tests
               shell: pwsh
-              run: ./DnsClientX.Tests.ps1
+              run: ./Module/DnsClientX.Tests.ps1
 
     test-macos:
         needs: refresh-psd1
@@ -191,5 +191,5 @@ jobs:
 
             - name: Run PowerShell tests
               shell: pwsh
-              run: ./DnsClientX.Tests.ps1
+              run: ./Module/DnsClientX.Tests.ps1
 
