--- a/DnsClientX.Tests/DnsClientX.Tests.csproj
+++ b/DnsClientX.Tests/DnsClientX.Tests.csproj
@@ -3,7 +3,8 @@
         <TargetFrameworks Condition=" '$([MSBuild]::IsOsPlatform(`Windows`))' ">
             net472;net8.0;net9.0
         </TargetFrameworks>
-        <TargetFrameworks Condition=" '$([MSBuild]::IsOsPlatform(`OSX`))' Or '$([MSBuild]::IsOsPlatform(`Linux`))' ">
+        <TargetFrameworks
+            Condition=" '$([MSBuild]::IsOsPlatform(`OSX`))' Or '$([MSBuild]::IsOsPlatform(`Linux`))' ">
             net8.0
         </TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -13,9 +14,9 @@
         <IsTestProject>true</IsTestProject>
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
-
     <ItemGroup>
-        <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.14.0" Condition="$([MSBuild]::IsOsPlatform('OSX'))" />
+        <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.14.0"
+            Condition="$([MSBuild]::IsOsPlatform('OSX'))" />
         <PackageReference Include="SemanticComparison" Version="4.1.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
         <PackageReference Include="xunit" Version="2.9.3" />
@@ -27,6 +28,8 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="System.Net.Http" Version="4.3.4"
+            Condition="'$(TargetFramework)' == 'net472'" />
     </ItemGroup>
 
     <ItemGroup>
