--- a/.github/workflows/test-dotnet.yml
+++ b/.github/workflows/test-dotnet.yml
@@ -38,6 +38,8 @@ jobs:
 
             - name: Run tests
               run: dotnet test DnsClientX.Tests/DnsClientX.Tests.csproj --configuration ${{ env.BUILD_CONFIGURATION }} --framework net8.0 --no-build --verbosity normal --logger trx --collect:"XPlat Code Coverage"
+              env:
+                  DNSCLIENTX_DEBUG_SYSTEMDNS: '1'
 
             - name: Upload test results
               uses: actions/upload-artifact@v4
@@ -78,6 +80,8 @@ jobs:
 
             - name: Run tests
               run: dotnet test DnsClientX.Tests/DnsClientX.Tests.csproj --configuration ${{ env.BUILD_CONFIGURATION }} --framework net8.0 --no-build --verbosity normal --logger trx --collect:"XPlat Code Coverage"
+              env:
+                  DNSCLIENTX_DEBUG_SYSTEMDNS: '1'
 
             - name: Upload test results
               uses: actions/upload-artifact@v4
@@ -118,6 +122,8 @@ jobs:
 
             - name: Run tests
               run: dotnet test DnsClientX.Tests/DnsClientX.Tests.csproj --configuration ${{ env.BUILD_CONFIGURATION }} --framework net8.0 --no-build --verbosity normal --logger trx --collect:"XPlat Code Coverage"
+              env:
+                  DNSCLIENTX_DEBUG_SYSTEMDNS: '1'
 
             - name: Upload test results
               uses: actions/upload-artifact@v4
