--- a/.github/workflows/test-dotnet.yml
+++ b/.github/workflows/test-dotnet.yml
@@ -3,7 +3,7 @@ name: Test .NET
 on:
     push:
         branches:
-            - master
+            - main
         paths-ignore:
             - '*.md'
             - 'Docs/**'
@@ -11,7 +11,7 @@ on:
             - '.gitignore'
     pull_request:
         branches:
-            - master
+            - main
     workflow_dispatch:
 
 env:
