--- a/.github/workflows/test-dotnet.yml
+++ b/.github/workflows/test-dotnet.yml
@@ -22,6 +22,7 @@ jobs:
     test-windows:
         name: 'Windows'
         runs-on: windows-latest
+        timeout-minutes: 10
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
@@ -64,6 +65,7 @@ jobs:
     test-ubuntu:
         name: 'Ubuntu'
         runs-on: ubuntu-latest
+        timeout-minutes: 10
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
@@ -106,6 +108,7 @@ jobs:
     test-macos:
         name: 'macOS'
         runs-on: macos-latest
+        timeout-minutes: 10
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
