--- a/.github/workflows/test-powershell.yml
+++ b/.github/workflows/test-powershell.yml
@@ -22,6 +22,7 @@ jobs:
     refresh-psd1:
         name: 'Refresh PSD1'
         runs-on: windows-latest
+        timeout-minutes: 10
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
@@ -48,6 +49,7 @@ jobs:
         needs: refresh-psd1
         name: 'Windows PowerShell 5.1'
         runs-on: windows-latest
+        timeout-minutes: 10
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
@@ -83,6 +85,7 @@ jobs:
         needs: refresh-psd1
         name: 'Windows PowerShell 7'
         runs-on: windows-latest
+        timeout-minutes: 10
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
@@ -118,6 +121,7 @@ jobs:
         needs: refresh-psd1
         name: 'Ubuntu PowerShell 7'
         runs-on: ubuntu-latest
+        timeout-minutes: 10
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
@@ -160,6 +164,7 @@ jobs:
         needs: refresh-psd1
         name: 'macOS PowerShell 7'
         runs-on: macos-latest
+        timeout-minutes: 10
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
