--- a/.github/workflows/test-dotnet.yml
+++ b/.github/workflows/test-dotnet.yml
@@ -61,6 +61,7 @@ jobs:
               uses: codecov/codecov-action@v4
               with:
                   files: '**/coverage.cobertura.xml'
+                  fail_ci_if_error: false
 
     test-ubuntu:
         name: 'Ubuntu'
@@ -104,6 +105,7 @@ jobs:
               uses: codecov/codecov-action@v4
               with:
                   files: '**/coverage.cobertura.xml'
+                  fail_ci_if_error: false
 
     test-macos:
         name: 'macOS'
@@ -147,4 +149,5 @@ jobs:
               uses: codecov/codecov-action@v4
               with:
                   files: '**/coverage.cobertura.xml'
+                  fail_ci_if_error: false
 
