Enable XML docs generation and apply inheritdoc

--- a/DnsClientX.Benchmarks/DnsClientX.Benchmarks.csproj
+++ b/DnsClientX.Benchmarks/DnsClientX.Benchmarks.csproj
@@ -5,6 +5,7 @@
     <LangVersion>Latest</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.15.2" />
