--- a/DnsClientX.PowerShell/DnsClientX.PowerShell.csproj
+++ b/DnsClientX.PowerShell/DnsClientX.PowerShell.csproj
@@ -6,14 +6,18 @@
         <TargetFrameworks Condition=" '$([MSBuild]::IsOsPlatform(`OSX`))'  Or '$([MSBuild]::IsOsPlatform(`Linux`))' ">
             net8.0
         </TargetFrameworks>
-        <Description>PowerShell Module for working with Event Logs</Description>
+        <Title>DnsClientX PowerShell Module</Title>
+        <Description>PowerShell module for DnsClientX DNS library. Provides cmdlets for DNS queries, service discovery, zone transfers, and DNS updates.</Description>
         <AssemblyName>DnsClientX.PowerShell</AssemblyName>
-        <AssemblyTitle>DnsClientX.PowerShell</AssemblyTitle>
+        <AssemblyTitle>DnsClientX PowerShell Module</AssemblyTitle>
         <VersionPrefix>1.0.0</VersionPrefix>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
+        <FileVersion>1.0.0</FileVersion>
         <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
         <Company>Evotec</Company>
         <Authors>Przemyslaw Klys</Authors>
-        <LangVersion>latest</LangVersion>
+        <Copyright>(c) 2011 - 2025 Przemyslaw Klys @ Evotec. All rights reserved.</Copyright>
+        <LangVersion>Latest</LangVersion>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
