--- a/DnsClientX/DnsClientX.csproj
+++ b/DnsClientX/DnsClientX.csproj
@@ -5,14 +5,14 @@
             DnsClientX is an async C# library for DNS over UDP, TCP, HTTPS (DoH), and TLS
             (DoT). It also has a PowerShell module that can be used to query DNS records. It
             provides a simple way to query DNS records using multiple DNS providers. It supports
-            multiple DNS record types and parallel queries. It's available for .NET 6, .NET 7, .NET
-            8, .NET Standard 2.0, and .NET 4.7.2.
+            multiple DNS record types and parallel queries. It's available for .NET 8, .NET 9,
+            .NET Standard 2.0, and .NET Framework 4.7.2.
         </Description>
         <AssemblyName>DnsClientX</AssemblyName>
         <AssemblyTitle>DnsClientX</AssemblyTitle>
         <VersionPrefix>1.0.0</VersionPrefix>
-        <AssemblyVersion>0.3.4</AssemblyVersion>
-        <FileVersion>0.3.4</FileVersion>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
+        <FileVersion>1.0.0</FileVersion>
         <TargetFrameworks Condition=" '$([MSBuild]::IsOsPlatform(`Windows`))' ">
             netstandard2.0;net472;net8.0;net9.0
         </TargetFrameworks>
@@ -37,7 +37,7 @@
         <RequireLicenseAcceptance>false</RequireLicenseAcceptance>
         <DelaySign>False</DelaySign>
         <IsPublishable>True</IsPublishable>
-        <Copyright>(c) 2011 - 2024 Przemyslaw Klys @ Evotec. All rights reserved.</Copyright>
+        <Copyright>(c) 2011 - 2025 Przemyslaw Klys @ Evotec. All rights reserved.</Copyright>
 
         <RepositoryUrl>https://github.com/EvotecIT/DnsClientX</RepositoryUrl>
         <DebugType>portable</DebugType>
